[package]
name = "containers-api-conn"
version = "0.1.1"
edition = "2021"

authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
description = "Base connection interface used in podman-api and docker-api crates."
license = "MIT"
documentation = "https://docs.rs/containers-api-conn"
homepage = "https://github.com/vv9k/containers-api-conn"
repository = "https://github.com/vv9k/containers-api-conn"
keywords = ["podman", "api", "containers", "docker", "unix"]

[dependencies]
log = "0.4"
thiserror = "1"
serde = { version="1", features=["derive"] }
serde_json = "1"
mime = "0.3"
url = "2.1"
tokio = "1"
futures-util = "0.3"
futures_codec = "0.4"
http = "0.2"
pin-project = "1"
hyper = { version="0.14", features=["client", "http1", "tcp", "stream"] }
hyper-openssl = { version="0.9", optional=true }
openssl = { version="0.10", optional=true }

[target.'cfg(unix)'.dependencies]
hyperlocal = { version="0.8" }

[features]
default = []
tls = ["openssl", "hyper-openssl"]
vendored-ssl = ["tls", "openssl/vendored"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
