[package]
name = "containers-api"
version = "0.6.0"
edition = "2021"
authors = ["Wojciech Kępka <wojciech@wkepka.dev>"]
description = "Common functionality used in podman-api and docker-api crates."
license = "MIT"
documentation = "https://docs.rs/containers-api"
homepage = "https://github.com/vv9k/containers-api"
repository = "https://github.com/vv9k/containers-api"
keywords = ["docker", "podman"]

[dependencies]
log = "0.4"
thiserror = "1"
serde = { version="1", features=["derive"] }
serde_json = "1"
mime = "0.3"
url = "2.1"
tokio = "1"
futures-util = { version = "0.3", features = ["io"] }
http = "0.2"
pin-project = "1"
hyper = { version="0.14", features=["client", "http1", "tcp", "stream"] }
hyper-openssl = { version="0.9", optional=true }
openssl = { version="0.10", optional=true }

chrono = { version="0.4", optional=true, features=["serde"] }

tar = "0.4"
flate2 = "1"

paste = "1"

[target.'cfg(unix)'.dependencies]
hyperlocal = { version="0.8" }

[features]
default = ["chrono"]
tls = ["openssl", "hyper-openssl"]
vendored-ssl = ["tls", "openssl/vendored"]


# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
